--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,6 +6,7 @@
       "dom.iterable",
       "esnext"
     ],
+    "baseUrl": "src",
     "allowJs": true,
     "skipLibCheck": true,
     "esModuleInterop": true,
@@ -21,6 +22,11 @@
     "jsx": "react-jsx"
   },
   "include": [
-    "src"
+    "src",
+    "components",
+    "src/lib",
+    "app",
+    "*.ts",
+    "*.tsx"
   ]
 }
